--- a/themes/mod-space.css
+++ b/themes/mod-space.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
 .mod-space-container {
   width: 600px;
   padding: 20px 20px 450px 20px;
