--- a/themes/mod-fight.css
+++ b/themes/mod-fight.css
@@ -3,7 +3,7 @@
   padding: 20px;
   border: 3px solid #C2C2FF;
   border-radius: 300px 300px 0 0;
-  background-color: #FFFFC2;
+  background-color: #040720;
   position: relative;
   margin: 60px auto 0 auto;
   box-sizing: border-box;
@@ -30,13 +30,13 @@
   font-size: 14px;
   line-height: 150%;
   font-family: Arial, sans-serif;
-  color: #000000;
+  color: #ffffff;
   margin-top: 400px;
   z-index: 1;
 }
 
 .mod-fight-inner b {
-  color: #040720;
+  color: #FFFFC2;
 }
 
 .mod-fight-credit {
