--- a/themes/mod-smirky.css
+++ b/themes/mod-smirky.css
@@ -1,31 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
 
-.mod-smirky-container {
+.mod-smirky-wrapper {
   width: 480px;
   margin: 0 auto;
-  background-color: #1e1a2a;
-  border: 2px solid #9e8ea1;
-  border-radius: 30px;
-  overflow: hidden;
-  box-shadow: 0 0 15px rgba(158, 142, 161, 0.3);
-  font-family: 'Poppins', sans-serif;
+  text-align: center;
+  position: relative;
 }
 
 .mod-smirky-image {
-  width: 100%;
-  height: 300px;
-  background: url('https://f2.toyhou.se/file/f2-toyhou-se/images/78867405_xCDYkktQqDQfw6q.png?1712381138') no-repeat center top;
+  width: 240px;
+  height: 240px;
+  background: url('https://f2.toyhou.se/file/f2-toyhou-se/images/78867405_xCDYkktQqDQfw6q.png?1712381138') no-repeat center center;
   background-size: cover;
-  border-bottom: 2px solid #9e8ea1;
+  margin: 0 auto -40px auto;
+  z-index: 2;
+  position: relative;
+}
+
+.mod-smirky-container {
+  background-color: #2c243a;
+  border: 2px solid #9e8ea1;
+  border-radius: 30px;
+  box-shadow: 0 0 15px rgba(158, 142, 161, 0.3);
+  padding: 20px;
+  position: relative;
+  z-index: 1;
 }
 
 .mod-smirky-inner {
-  padding: 20px;
-  background-color: #2c243a;
-  color: #ffffff;
-  text-align: justify;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   line-height: 1.5;
+  color: #ffffff;
+  text-align: justify;
 }
 
 .mod-smirky-inner b {
