--- a/themes/mod-smirky.css
+++ b/themes/mod-smirky.css
@@ -1,18 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
 
 .mod-smirky-wrapper {
-  width: 480px;
+  width: 100%;
+  max-width: 480px;
   margin: 0 auto;
   text-align: center;
   position: relative;
 }
 
 .mod-smirky-image {
-  width: 240px;
-  height: 240px;
+  width: 300px;
+  height: auto;
+  aspect-ratio: 1 / 1;
   background: url('https://f2.toyhou.se/file/f2-toyhou-se/images/78867405_xCDYkktQqDQfw6q.png?1712381138') no-repeat center center;
-  background-size: cover;
-  margin: 0 auto -40px auto;
+  background-size: contain;
+  margin: 0 auto -50px auto;
   z-index: 2;
   position: relative;
 }
