--- a/themes/mod-smirky.css
+++ b/themes/mod-smirky.css
@@ -1,39 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arial&display=swap');
 
-.mod-smirky-block {
-  max-width: 460px;
+.mod-smirky-container {
+  width: 600px;
+  padding: 20px;
+  border: 3px solid #69359c;
+  border-radius: 600px 600px 0 0;
+  background-color: #ebe8fc;
   margin: 0 auto;
-  font-family: 'Poppins', sans-serif;
-  text-align: center;
+  box-sizing: border-box;
 }
 
 .mod-smirky-image {
-  width: 260px;
-  height: 260px;
-  background: url('https://f2.toyhou.se/file/f2-toyhou-se/images/78867405_xCDYkktQqDQfw6q.png?1712381138') no-repeat center center;
-  background-size: cover;
-  margin: 0 auto -20px auto;
-  display: block;
-}
-
-.mod-smirky-box {
-  background-color: #2c243a;
-  border: 2px solid #9e8ea1;
-  border-radius: 30px;
-  box-shadow: 0 0 10px rgba(158, 142, 161, 0.25);
-  padding: 20px;
-  text-align: justify;
-  color: #ffffff;
+  width: 600px;
+  height: 345px;
+  background: url('https://f2.toyhou.se/file/f2-toyhou-se/images/78867405_xCDYkktQqDQfw6q.png?1712381138') no-repeat center top;
+  background-size: 600px auto;
 }
 
 .mod-smirky-inner {
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(to bottom, #69359c 15%, transparent) 1;
+  padding: 25px;
+  text-align: justify;
   font-size: 14px;
   line-height: 1.5;
+  font-family: Arial, sans-serif;
+  color: #000000;
 }
 
 .mod-smirky-inner b {
-  color: #ffc1e3;
-  font-weight: 700;
+  color: #69359c;
 }
 
 .mod-smirky-credit {
