--- a/themes/mod-bleh.css
+++ b/themes/mod-bleh.css
@@ -1,43 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Arial&display=swap');
 
-.mod-bleh-wrapper {
-  width: 600px;
-  margin: 0 auto;
-  padding-top: 75px;
-  box-sizing: border-box;
-  overflow: visible;
-}
-
 .mod-bleh-container {
   width: 450px;
-  margin: 0 auto;
+  padding: 20px;
   border: 3px solid #210148;
   border-radius: 300px 300px 0 0;
   background-color: rgba(26, 1, 57, 0.75);
   position: relative;
-  padding: 20px;
+  margin: 100px auto 0 auto;
   box-sizing: border-box;
+  overflow: visible;
 }
 
 .mod-bleh-image {
+  position: absolute;
+  top: -75px;
+  left: 50%;
+  transform: translateX(-50%);
   width: 600px;
   height: 525px;
   background: url('https://f2.toyhou.se/file/f2-toyhou-se/images/78867143_AIrBFg2ddnBikpT.png?1712381111') no-repeat center top;
   background-size: cover;
-  margin: -475px auto 0 auto;
+  z-index: 1;
 }
 
 .mod-bleh-inner {
-  margin-top: 25px;
+  position: relative;
   border: 2px solid #69359c;
   border-image: linear-gradient(to bottom, #210148 15%, transparent) 1;
   padding: 25px;
+  margin-top: 415px;
   text-align: justify;
   font-size: 14px;
   line-height: 1.5;
   font-family: Arial, sans-serif;
   color: #eedeff;
   background-color: transparent;
+  z-index: 2;
 }
 
 .mod-bleh-inner b {
