--- a/themes/ken-beach.css
+++ b/themes/ken-beach.css
@@ -8,10 +8,11 @@
   background-image: url('https://i.ibb.co/XkW4BMH/princesstable.png');
   background-repeat: no-repeat;
   background-position: center top;
-  background-size: 525px auto; /* important: restrict width */
+  background-size: 525px auto; /* scales correctly across platforms */
   border: 1px solid #bcdca0;
   box-sizing: border-box;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .ken-beach-inner {
