--- a/themes/ken-beach.css
+++ b/themes/ken-beach.css
@@ -2,17 +2,22 @@
 
 .ken-beach-container {
   width: 525px;
-  padding: 575px 30px 30px 30px;
+  border: 1px solid #bcdca0;
   border-radius: 10px;
   background-color: #719789;
-  background-image: url('https://i.ibb.co/XkW4BMH/princesstable.png');
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: 525px auto; /* scales correctly across platforms */
-  border: 1px solid #bcdca0;
   box-sizing: border-box;
-  margin: 0 auto;
-  overflow: hidden;
+  margin: 100px auto 0 auto;
+  overflow: visible;
+  position: relative;
+  padding: 30px;
+}
+
+.ken-beach-image {
+  width: 525px;
+  height: 545px;
+  background: url('https://i.ibb.co/XkW4BMH/princesstable.png') no-repeat center top;
+  background-size: cover;
+  margin: -575px auto 30px auto;
 }
 
 .ken-beach-inner {
