--- a/themes/ken-beach.css
+++ b/themes/ken-beach.css
@@ -7,9 +7,9 @@
   background-color: #719789;
   box-sizing: border-box;
   margin: 100px auto 0 auto;
-  overflow: visible;
+  overflow: hidden;
   position: relative;
-  padding: 30px 30px 30px 30px; /* no top padding */
+  padding: 0 30px 30px 30px;
 }
 
 .ken-beach-image {
@@ -17,7 +17,7 @@
   height: 545px;
   background: url('https://i.ibb.co/XkW4BMH/princesstable.png') no-repeat center top;
   background-size: cover;
-  margin: -545px auto 30px auto; /* now handles spacing from top */
+  margin: -100px auto -30px auto; /* slight lift, then pull into the box */
 }
 
 .ken-beach-inner {
