--- a/themes/ursus-moon.css
+++ b/themes/ursus-moon.css
@@ -13,7 +13,7 @@
 
 .ursus-moon-header {
   height: 240px;
-  background: url('https://images2.imgbox.com/c5/64/69HFcURZ_o.gif') no-repeat center top;
+  background: url('https://images2.imgbox.com/1e/37/Hd2DYQv4_o.png') no-repeat center top;
   background-size: cover;
   background-color: #111123;
   border-bottom: 2px solid #444466;
