--- a/themes/ursus-moon.css
+++ b/themes/ursus-moon.css
@@ -13,7 +13,7 @@
   transform: translateX(-50%);
   width: 320px;
   height: 320px;
-  background: url('https://images2.imgbox.com/c5/64/69HFcURZ_o.gif') no-repeat center top;
+  background: url('https://images2.imgbox.com/1e/37/Hd2DYQv4_o.png') no-repeat center top;
   background-size: contain;
   z-index: 0;
   pointer-events: none;
