--- a/themes/ursus-moon.css
+++ b/themes/ursus-moon.css
@@ -1,3 +1,5 @@
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+
 .ursus-moon-wrap {
   position: relative;
   width: 100%;
@@ -22,7 +24,7 @@
 .ursus-moon-text {
   position: relative;
   z-index: 2;
-  font-family: 'Tajawal', sans-serif;
+  font-family: 'Space Mono', monospace;
   color: #e5e7ff;
   text-align: left;
   padding: 0 20px;
@@ -41,4 +43,5 @@
   font-size: 10px;
   color: #8888aa;
   margin-top: 10px;
+  font-family: 'Space Mono', monospace;
 }
