--- a/themes/ursus-moon.css
+++ b/themes/ursus-moon.css
@@ -4,27 +4,23 @@
   width: 600px;
   margin: 0 auto;
   box-sizing: border-box;
-  position: relative;
+  text-align: center;
 }
 
 .ursus-moon-image {
   width: 600px;
   height: 600px;
-  margin: 0 auto -250px auto; /* pulls image down visually over arch */
   background: url('https://images2.imgbox.com/1e/37/Hd2DYQv4_o.png') no-repeat center center;
   background-size: contain;
-  z-index: 1;
-  pointer-events: none;
+  margin: 0 auto -200px auto; /* pull image down over arch */
 }
 
 .ursus-moon-arch {
   background-color: #0a0a0f;
   border: 3px solid #39395c;
   border-radius: 0 0 300px 300px;
-  padding: 25px;
+  padding: 240px 25px 25px 25px; /* top padding increased to make space for image */
   box-sizing: border-box;
-  position: relative;
-  z-index: 0;
 }
 
 .ursus-moon-inner {
