--- a/themes/ursus-moon.css
+++ b/themes/ursus-moon.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 
 .ursus-moon-container {
-  width: 90%;
-  max-width: 400px;
+  width: 400px;
   padding: 20px;
   border: 5px solid #39395c;
   border-radius: 0 0 400px 400px;
@@ -22,7 +21,7 @@
   line-height: 160%;
   font-family: 'Courier Prime', monospace;
   color: #dcdcee;
-  margin-bottom: 475px;
+  margin-bottom: 500px;
   box-sizing: border-box;
 }
 
@@ -35,8 +34,7 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  width: 100%;
-  max-width: 600px;
+  width: 600px;
   height: 600px;
   background: url('https://images2.imgbox.com/1e/37/Hd2DYQv4_o.png') no-repeat center bottom;
   background-size: contain;
