--- a/themes/gilda-sin.css
+++ b/themes/gilda-sin.css
@@ -54,7 +54,7 @@
   border-bottom: none;
   border-image: linear-gradient(transparent 0%, #d6b977 50%, transparent 100%) 1;
   padding: 15px;
-  font-family: 'Crimson Text', serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   line-height: 160%;
   text-align: justify;
