--- a/themes/expo-christmas.css
+++ b/themes/expo-christmas.css
@@ -9,7 +9,7 @@
   position:         relative;
   margin:           0 auto;
   box-sizing:       border-box;
-  overflow:         hidden;                           
+  overflow:         visible;                           
 }
 
 .expo-christmas-image {
