--- a/themes/expo-christmas.css
+++ b/themes/expo-christmas.css
@@ -1,63 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-.expo-christmas-container {
-  width:            400px;
-  padding:          20px;
-  border:           5px solid #d69794;                  
-  border-radius:    600px 600px 0 0;                    
-  background-color: #3e3936;                           
-  position:         relative;
-  margin:           0 auto;
-  box-sizing:       border-box;
-  overflow:         visible;                           
+.expo-christmas-wrapper {
+  position: relative;
+  width: 400px;
+  margin: 0 auto;
 }
 
 .expo-christmas-image {
-  position:        absolute;
-  left:            50%;
-  transform:       translateX(-50%);
-  width:           600px;                               
-  height:          425px;                              
-  background:      url('https://images2.imgbox.com/79/19/s7JwNgUb_o.png')
-                   no-repeat center top;
-  background-size: cover;                              
-  top:             -25px;                              
-  z-index:         1;                        
+  position: absolute;
+  top: -260px; 
+  left: 50%;
+  transform: translateX(-50%);
+  width: 400px;
+  height: auto;
+  background: url('https://images2.imgbox.com/79/19/s7JwNgUb_o.png') no-repeat center top;
+  background-size: contain;
+  z-index: 5;
+}
+
+.expo-christmas-container {
+  width: 100%;
+  padding: 20px;
+  border: 5px solid #d69794;
+  border-radius: 600px 600px 0 0;
+  background-color: #3e3936;
+  box-sizing: border-box;
+  position: relative;
+  z-index: 1;
+  overflow: visible;
+  margin-top: 200px; 
 }
 
 .expo-christmas-inner {
-  position:         relative;
-  z-index:          2;                                 
-  border-width:        0 2px 0 2px;                    
-  border-style:        solid;
-  border-image-source: linear-gradient(
-                         to bottom,
-                         transparent 15%,
-                         #9dac97 50%,
-                         transparent 85%
-                       );
-  border-image-slice:   1;
+  position: relative;
+  z-index: 2;
+  padding: 20px 25px;
+  margin-top: 150px;
+  text-align: justify;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  color: #d69794;
+  background-color: rgba(62, 57, 54, 0.8);
+  box-sizing: border-box;
 
-  padding:           20px;
-  margin-top:        385px;                              
-  text-align:        justify;
-  font-family:       'Montserrat', sans-serif;
-  font-size:         14px;
-  line-height:       1.5;
-  color:             #d69794;                            
-  background-color:  rgba(62, 57, 54, 0.8);              
-  box-sizing:        border-box;
+  border-width: 0 2px 0 2px;
+  border-style: solid;
+  border-image-source: linear-gradient(to bottom, transparent 15%, #9dac97 50%, transparent 85%);
+  border-image-slice: 1;
 }
 
 .expo-christmas-inner b {
-  color:        #9266ad;                                 
-  font-weight:  bold;
+  color: #9266ad;
+  font-weight: bold;
 }
 
 .expo-christmas-credit {
   font-family: 'Montserrat', sans-serif;
-  font-size:   10px;
-  text-align:  center;
-  margin-top:  10px;
-  color:       #aaa;                                     
+  font-size: 10px;
+  text-align: center;
+  margin-top: 10px;
+  color: #aaa;
 }
